# calculator-demo

./: .gitignore  Cargo.toml  api-config.yml  build.sh  composed.wasm  composed.wat  config.yml  spin.toml
api/: Cargo.toml
api/src/: lib.rs
calculator/: Cargo.toml  calculator.wat
calculator/src/: lib.rs
operator/: Cargo.toml  operator.wat
operator/src/: lib.rs
operators/add/: Cargo.toml
operators/add/src/: lib.rs
operators/sub/: sub.js
wit/: calculator.wit
