[package]
name = "api"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[package.metadata.component]
# package = "local:api"
# target = { path = "../wit/deps/spin", world = "http-trigger" }

[package.metadata.component.dependencies]
"local:calculator" = { path = "../calculator/target/wasm32-wasi/release/calculator.wasm" }

[dependencies]
wit-bindgen = { version = "0.9.0" }
