[package]
name = "api"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[package.metadata.component]
# package = "local:api"
# target = { path = "../wit/deps/spin", world = "http-trigger" }

[package.metadata.component.dependencies]
"local:calculator" = { path = "../target/wasm32-wasi/release/calculator.wasm" }

[dependencies]
anyhow = "1.0.72"
serde = { version = "1.0.173", features = ["serde_derive"] }
serde_qs = "0.12.0"
wit-bindgen.workspace = true
