[package]
name = "calculator"
version = "0.1.0"
edition = "2021"


[dependencies]
wit-bindgen = { version = "0.8.0", default_features = false }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "local:calculator"
target = { path = "../wit", world = "calculator" }

[package.metadata.component.dependencies]
